--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 .easy-editor {
-  /* prevents external styling messing with things*/
   all: initial;
-  box-sizing: border-box;
-  display: flex;
   position: relative;
+  display: flex;
+  box-sizing: border-box;
   width: 100%;
   height: 100%;
 }
@@ -12,6 +11,8 @@
   position: relative;
   display: flex;
   flex: 1;
+  font: inherit;
+  line-height: inherit;
 }
 
 .easy-editor-input {
@@ -23,12 +24,12 @@
   scrollbar-width: thin;
   outline: none;
   margin: 0px;
-  padding: 0px;
+  padding: 5px;
   color: transparent;
   background: transparent;
-  padding: 5px;
   z-index: 999;
-  line-height: 1;
+  font: inherit;
+  line-height: inherit;
 }
 
 .easy-editor-display {
@@ -39,15 +40,27 @@
   width: 100%;
   overflow: hidden;
   margin: 0px;
-  padding: 0px;
-  line-height: 1;
+  padding: 5px;
+  font: inherit;
+  line-height: inherit;
 }
 
 .easy-editor-display-pre {
   box-sizing: border-box;
   margin: 0px;
-  padding: 5px;
   line-height: 1;
+  width: fit-content;
+  height: fit-content;
+  font: inherit;
+  line-height: inherit;
+}
+
+.easy-editor-display-code {
+  box-sizing: border-box;
+  display: inline-block;
+  margin: 0px;
+  font: inherit;
+  line-height: inherit;
 }
 
 .easy-editor-line-numbers {
@@ -57,5 +70,6 @@
   padding: 10px;
   padding-top: 5px;
   margin: 0px;
-  line-height: 1;
+  font: inherit;
+  line-height: inherit;
 }
