--- a/src/main.css
+++ b/src/main.css
@@ -34,9 +34,19 @@ body {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  align-items: center;
   width: 50%;
   height: fit-content;
-  margin-top: 10%;
+  margin-top: 5%;
+}
+
+@keyframes rotating {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 @media only screen and (width <= 768px) {
