--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@
   display: flex;
   flex: 1;
   font: inherit;
-  line-height: 1;
+  line-height: inherit;
 }
 
 .easy-editor-input {
@@ -49,7 +49,7 @@
   position: relative;
   box-sizing: border-box;
   margin: 0px;
-  line-height: 1;
+  line-height: inherit;
   font: inherit;
   line-height: inherit;
 }
