--- a/src/main.css
+++ b/src/main.css
@@ -9,6 +9,7 @@ body {
   width: 100vw;
   height: 100vh;
   text-align: center;
+  overflow: hidden;
 }
 
 #homepage {
@@ -36,8 +37,10 @@ body {
   flex-direction: column;
   align-items: center;
   width: 50%;
-  height: fit-content;
-  margin-top: 5%;
+  height: 100%;
+  padding-top: 5%;
+  overflow-y: auto;
+  scrollbar-width: thin;
 }
 
 @keyframes rotating {
@@ -49,7 +52,7 @@ body {
   }
 }
 
-@media only screen and (width <= 768px) {
+@media only screen and (width <= 1024px) {
   #container {
     flex-direction: column;
   }
@@ -60,7 +63,7 @@ body {
   }
 
   #output {
-    margin-top: 0px;
+    padding-top: 0px;
     height: 50%;
     width: 100%;
   }
