--- a/src/homepage/main.css
+++ b/src/homepage/main.css
@@ -15,11 +15,23 @@ body {
 
 #header {
   display: flex;
-  align-items: center;
+  justify-content: space-between;
   background-color: #2a2a2e;
   padding: 15px;
-
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+#demo-select {
+  box-sizing: border-box;
+  background-color: inherit;
+  color: aliceblue;
+  border: none;
+  outline: none;
+}
+
+#header-text-container {
+  display: flex;
+  align-items: center;
 }
 
 #header-icon {
@@ -43,8 +55,8 @@ body {
 
 #demo-container {
   display: flex;
-  flex: 1;
   width: 100%;
+  height: 100%;
 }
 
 @media only screen and (width <= 1024px) {
