--- a/src/homepage/demos/ide/ide.css
+++ b/src/homepage/demos/ide/ide.css
@@ -1,7 +1,7 @@
 #ide {
   display: flex;
   flex-direction: column;
-  width: 90%;
+  width: 75%;
   height: 90%;
   margin: auto;
 }
@@ -17,16 +17,21 @@
   background-color: #2a2a2e;
   border: none;
   color: aliceblue;
-  box-sizing: border-box;
   width: 100px;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-sizing: border-box;
+}
+
+.ide-button:hover {
+  color: #61dbfb;
+  /* outline: #61dbfb solid 1px; */
+  cursor: pointer;
+  /* box-shadow: #61dbfb 0px 0px 1px; */
 }
 
 #ide-input {
   width: 100%;
   height: 50%;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  margin-bottom: 10px;
 }
 
 #ide-output {
@@ -38,4 +43,15 @@
   overflow: auto;
   scrollbar-width: thin;
   margin: 0px;
+}
+
+@media only screen and (width <= 1024px) {
+  #ide {
+    width: 100%;
+    flex-grow: 1;
+  }
+
+  #ide-buttons {
+    margin-bottom: 0px;
+  }
 }
