--- a/src/homepage/demos/preview/preview.css
+++ b/src/homepage/demos/preview/preview.css
@@ -1,13 +1,21 @@
 #real-time-preview {
+  width: 100%;
+  height: 600px;
+  background: rgb(24, 24, 27);
+  background: linear-gradient(180deg, rgba(24, 24, 27, 1) 0%, rgba(32, 32, 36, 1) 100%);
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+#real-time-preview-container {
+  margin: auto;
   display: flex;
   width: 75%;
-  height: 90%;
-  margin: auto;
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  height: 100%;
 }
 
 #editor-container {
   width: 50%;
+  padding: 20px;
 }
 
 #output {
@@ -21,31 +29,28 @@
   padding-top: 5%;
   overflow-y: auto;
   scrollbar-width: thin;
+  padding: 20px;
 }
 
-@media only screen and (width <= 1440px) {
+@media only screen and (width <= 1024px) {
   #real-time-preview {
+    height: 1000px;
+  }
+
+  #real-time-preview-container {
+    width: 100%;
     flex-direction: column-reverse;
   }
 
   #editor-container {
     height: 50%;
     width: 100%;
+    padding: 0px;
   }
 
   #output {
     height: 50%;
     width: 100%;
-  }
-}
-
-@media only screen and (width <= 1024px) {
-  #real-time-preview {
-    width: 100%;
-    flex-grow: 1;
-  }
-
-  #output {
-    border: none;
+    padding: 0px;
   }
 }
