--- a/src/homepage/demos/theme/theme.css
+++ b/src/homepage/demos/theme/theme.css
@@ -1,9 +1,9 @@
-#performance {
+#theme {
   width: 100%;
-  height: 600px;
+  height: 300px;
 }
 
-#performance-container {
+#theme-container {
   width: 75%;
   margin: auto;
   margin-top: 20px;
@@ -12,28 +12,27 @@
   height: 100%;
 }
 
-#performance-info {
+#theme-info {
   margin: auto;
   width: 50%;
+  /* margin-left: 5%; */
 }
 
-#performance-info-p {
+#theme-info-p {
   color: #bcbcbc;
   width: 90%;
 }
 
-.performance-link {
-  color: #61dbfb;
-}
-
-#performance-editor {
+#theme-editor {
   margin: auto;
   width: 50%;
-  height: 80%;
+  /* width: 45%; */
+  height: 190px;
+  /* height: 200px; */
 }
 
 @media only screen and (width <= 1024px) {
-  #performance-container {
+  #theme-container {
     width: 100%;
   }
 }
