--- a/src/homepage/demos/performance/performance.css
+++ b/src/homepage/demos/performance/performance.css
@@ -6,9 +6,7 @@
 #performance-container {
   width: 75%;
   margin: auto;
-  margin-top: 20px;
   display: flex;
-  width: 75%;
   height: 100%;
 }
 
@@ -33,7 +31,7 @@
 }
 
 @media only screen and (width <= 1024px) {
-  #performance-container {
-    width: 100%;
+  #performance {
+    display: none;
   }
 }
