--- a/src/homepage/demos/powered/powered.css
+++ b/src/homepage/demos/powered/powered.css
@@ -1,9 +1,6 @@
 #powered {
   width: 100%;
-  /* height: 600px; */
-  border-top: 1px solid #bcbcbc;
-  /* border-bottom: 1px solid #bcbcbc; */
-  /* box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; */
+  border-top: 1px solid var(--text-secondary-color);
 }
 
 #powered-container {
