--- a/src/homepage/demos/preview/preview.css
+++ b/src/homepage/demos/preview/preview.css
@@ -7,7 +7,6 @@
     var(--background-secondary-color) 100%
   );
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
-  /* border-bottom: 1px solid white; */
 }
 
 #real-time-preview-container {
@@ -15,6 +14,7 @@
   display: flex;
   width: 75%;
   height: 100%;
+  max-width: 1500px;
 }
 
 #editor-container {
