--- a/src/homepage/css/PerformanceEditor.module.css
+++ b/src/homepage/css/PerformanceEditor.module.css
@@ -1,9 +1,9 @@
-#simple {
+.performance {
   width: 100%;
   height: 600px;
 }
 
-#simple-container {
+.performanceContainer {
   width: 75%;
   margin: auto;
   display: flex;
@@ -11,28 +11,28 @@
   max-width: 1500px;
 }
 
-#simple-info {
+.performanceInfo {
   margin: auto;
   width: 50%;
 }
 
-#simple-info-p {
+.performanceInfoP {
   color: var(--text-color);
   width: 90%;
 }
 
-.simple-link {
+.performanceLink {
   color: #61dbfb;
 }
 
-#simple-editor {
+.performanceEditor {
   margin: auto;
   width: 50%;
   height: 80%;
 }
 
 @media only screen and (width <= 1024px) {
-  #simple {
+  .performance {
     display: none;
   }
 }
