--- a/src/homepage/css/SimpleEditor.module.css
+++ b/src/homepage/css/SimpleEditor.module.css
@@ -1,9 +1,9 @@
-#theme {
+.simple {
   width: 100%;
-  height: 300px;
+  height: 600px;
 }
 
-#theme-container {
+.simpleContainer {
   width: 75%;
   margin: auto;
   display: flex;
@@ -11,33 +11,28 @@
   max-width: 1500px;
 }
 
-#theme-info {
+.simpleInfo {
   margin: auto;
   width: 50%;
-  margin-left: 5%;
 }
 
-#theme-info-p {
+.simpleInfoP {
   color: var(--text-color);
   width: 90%;
 }
 
-#theme-editor {
+.simpleLink {
+  color: #61dbfb;
+}
+
+.simpleEditor {
   margin: auto;
-  width: 45%;
-  height: 190px;
-}
-
-#toggle-line-numbers {
-  display: flex;
-}
-
-#line-numbers-checkbox {
-  margin-left: 0px;
+  width: 50%;
+  height: 80%;
 }
 
 @media only screen and (width <= 1024px) {
-  #theme {
+  .simple {
     display: none;
   }
 }
