--- a/src/homepage/css/ThemeEditor.module.css
+++ b/src/homepage/css/ThemeEditor.module.css
@@ -1,9 +1,9 @@
-#performance {
+.theme {
   width: 100%;
-  height: 600px;
+  height: 300px;
 }
 
-#performance-container {
+.themeContainer {
   width: 75%;
   margin: auto;
   display: flex;
@@ -11,28 +11,33 @@
   max-width: 1500px;
 }
 
-#performance-info {
+.themeInfo {
   margin: auto;
   width: 50%;
+  margin-left: 5%;
 }
 
-#performance-info-p {
+.themeInfoP {
   color: var(--text-color);
   width: 90%;
 }
 
-.performance-link {
-  color: #61dbfb;
+.themeEditor {
+  margin: auto;
+  width: 45%;
+  height: 190px;
 }
 
-#performance-editor {
-  margin: auto;
-  width: 50%;
-  height: 80%;
+.toggleLineNumbers {
+  display: flex;
+}
+
+.lineNumbersCheckbox {
+  margin-left: 0px;
 }
 
 @media only screen and (width <= 1024px) {
-  #performance {
+  .theme {
     display: none;
   }
 }
